JEDIT 4.3 VERSION HISTORY

{{{ Version 4.3pre7

Thanks to Matthieu Casanova, Marcelo Vanzin, Nicholas O'leary,
Marcin Orlowski, and Alan Ezust for contributing to this release.

{{{ API Changes

-  GUIUtilities.addSizeSaver(Frame parent, String name) changed to
   GUIUtilities.addSizeSaver(Window window, Container parent, String name)
   and refactored to use saveGeometry(). Saves/restores
   sizes relative to a parent container. if parent=null, behaves
   as before. (ezust)

- jEdit.getPlugin(className, bool) now will search for and
  load plugins that were not yet loaded, given a className to search
  for. (ezust)

- added PluginJAR.findPlugin() which is used by the above method (ezust).

- added PluginJAR.load(), formerly a private method moved
  from the ManagePanel class. Also moved transitiveClosure() into
  the PluginJAR class. General refactoring to make the
  plugin management code more centrally located.  (ezust)

- added SearchMatcher.isMatchingEOL(); indicates whether the matched
  region ends at an EOL character. Part of bug fix for SF Bug #1541009.
  (Marcelo Vanzin)

- added new class org.gjt.sp.jedit.io.VFSFileFilter; an interface that
  defines a filter used by the VFS browser. (Marcelo Vanzin)

- added VFSBrowser.addVFSFileFilter() and VFSBrowser.getVFSFileFilter().
  Deprecated VFSBrowser.getFilenameFilter(). (Marcelo Vanzin)

- added VFS._listDirectory(Object,String,VFSFileFilter,boolean,Component,boolean,boolean)
  (Marcelo Vanzin)

- moved MiscUtilities.globToRE() to StandardUtilities. (Marcelo Vanzin)

- added org.gjt.sp.util.PropertiesBean. See javadoc for details.
  (Marcelo Vanzin)

}}}

{{{ Edit Modes

Interlis mode updated to version 2.3 (patch # 1464779)

Progress mode supports nested comments (patch# 1211534)

New edit mode: Pilrc *rcp mode by Marcin Orlowski
}}}

{{{ Bug Fixes

- File System Browser now recognizes DEL and F2 to delete/rename
  files. (1542365) (ezust)
